# hastings

./: 02_modelling.ipynb  02_modelling_rf.ipynb  03_modelling_lr.ipynb  04_modelling_lr_scaled.ipynb  05_modelling_lr_int.ipynb  06_modelling_rf_int.ipynb  07_modelling_gbm_int.ipynb  08_modelling_lr_stepwise.ipynb  10_summary.ipynb  README.md  pyproject.toml  task.ipynb
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
data/: Data_Scientist_Interview_Task.xlsx  categories_grouped.pkl  column_meta_org.pkl  full_cat_encoders.pkl  full_count_encoders.pkl  full_test.parquet  full_train.parquet  recent_cat_encoders.pkl  recent_count_encoders.pkl  recent_test.parquet  recent_train.parquet  task_data.csv
src/: add_date_features.py  column_meta.py  create_interaction_cols.py  explore_cat_col.py  explore_cont_col.py  explore_count_col.py  interaction_eval.py  linear_regression_eda.py
