[project]
name = "hastings"
version = "0.1.0"
description = "Tabular predictive modelling project"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "scikit-learn",
    "xgboost>=2.0.0",
    "pandas-profiling",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "plotly>=6.2.0",
    "prophet>=1.1.7",
    "statsmodels>=0.14.1",
    "pyarrow>=17.0.0",
]
